# Automated-Post-LFS

./: .gitignore  README.md  install-lfs-pm.sh  lfs-build-root  listversiondifferences  push-to-github.sh  pyproject.toml  root-overrides.yaml  run-lfs-pm.sh  switch-bluetooth-adapter.sh  update_git.sh
examples/: custom_packages.yaml
src/lfs_unified_pm/: __init__.py  app.py  build.py  build_scripts.py  catalog.py  cli.py  config.py  custom_builds.py  git_source.py  guarded_ops.py  jhalfs.py  lfs_base.py  models.py  packaging.py  scanner.py  settings.py  simple_yaml.py  solver.py  source_fetch.py  state.py  t2_recipe.py  tui.py
src/lfs_unified_pm/adapters/: __init__.py  arch.py  base_catalog.py  blfs_xml.py  custom_yaml.py  t2.py
src/lfs_unified_pm/data/: lfs13_base.yaml  t2_blacklist.txt
tests/: test_blfs_adapter.py  test_build_policy.py  test_build_scripts.py  test_cli.py  test_git_source.py  test_jhalfs.py  test_lfs_base.py  test_queue_merge.py  test_settings_and_profiles.py  test_simple_yaml.py  test_solver.py  test_sync_and_scan.py  test_t2_recipe.py
